--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@ main()
 <script type="text/javascript" src="../Common/webgl-utils.js"></script>
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
+
+<script type="text/javascript" src="entityManager.js"></script>
+<script type="text/javascript" src="Entity.js"></script>
+
 <script type="text/javascript" src="cube.js"></script>
 <script type="text/javascript" src="line.js"></script>
-<script type="text/javascript" src="Axis.js"></script>
-<script type="text/javascript" src="tromino.js"></script>
+<script type="text/javascript" src="axis.js"></script>
+<script type="text/javascript" src="trisis.js"></script>
 
 <body>
 <canvas id="gl-canvas" width="712"" height="712">
