setti inn í entity manager of fattaði svo að betri leið til að gera þetta

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ main()
 <script type="text/javascript" src="Entity.js"></script>
 
 <script type="text/javascript" src="line.js"></script>
+<script type="text/javascript" src="I_beam.js"></script>
+<script type="text/javascript" src="L_beam.js"></script>
 <script type="text/javascript" src="axis.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
