henti út öllu auka dóti og bjó til smá kassa sem mun örugglega breytast

--- a/index.html
+++ b/index.html
@@ -33,12 +33,8 @@ main()
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
 
-<script type="text/javascript" src="entityManager.js"></script>
-<script type="text/javascript" src="Entity.js"></script>
-
 <script type="text/javascript" src="line.js"></script>
-<script type="text/javascript" src="I_beam.js"></script>
-<script type="text/javascript" src="L_beam.js"></script>
+<script type="text/javascript" src="box.js"></script>
 <script type="text/javascript" src="axis.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
