--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@ main()
 <script type="text/javascript" src="line.js"></script>
 <script type="text/javascript" src="box.js"></script>
 <script type="text/javascript" src="axis.js"></script>
+<script type="text/javascript" src="cube.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
 <script type="text/javascript" src="trisis.js"></script>
