beam fastur inn í grid nema getur dottið um botninn, færði öll föll í util úr trisis.js

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ main()
 <script type="text/javascript" src="cube.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
+<script type="text/javascript" src="util.js"></script>
 <script type="text/javascript" src="trisis.js"></script>
 
 <body>
