--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@ main()
 <script type="text/javascript" src="trisis.js"></script>
 
 <body>
-<canvas id="gl-canvas" width="712"" height="712">
+<canvas id="gl-canvas" width="712" height="712">
 Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
+<p>You have <label id="label">0</label> points</p>
    
 <br/>
 
