komnir svartir stalkarar

--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@ main()
 <script type="text/javascript" src="../Common/initShaders.js"></script>
 <script type="text/javascript" src="../Common/MV.js"></script>
 
-<script type="text/javascript" src="line.js"></script>
+<script type="text/javascript" src="wallShadow.js"></script>
 <script type="text/javascript" src="box.js"></script>
-<script type="text/javascript" src="axis.js"></script>
 <script type="text/javascript" src="cube.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
