--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ main()
 <script type="text/javascript" src="../Common/MV.js"></script>
 
 <script type="text/javascript" src="wallShadow.js"></script>
+<script type="text/javascript" src="wall.js"></script>
 <script type="text/javascript" src="box.js"></script>
 <script type="text/javascript" src="cube.js"></script>
 <script type="text/javascript" src="beam.js"></script>
