Landend cubes litaðir núna, ekki falleg lausn

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@ main()
 <script type="text/javascript" src="wallShadow.js"></script>
 <script type="text/javascript" src="wall.js"></script>
 <script type="text/javascript" src="box.js"></script>
-<script type="text/javascript" src="cube.js"></script>
+<script type="text/javascript" src="greencube.js"></script>
+<script type="text/javascript" src="bluecube.js"></script>
 <script type="text/javascript" src="beam.js"></script>
 <script type="text/javascript" src="ell.js"></script>
 <script type="text/javascript" src="util.js"></script>
