color+texture prufa

--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@ uniform bool choose;
 void
 main()
 {
+	/*
     if(choose) {
     	gl_FragColor = texture2D(texture, fTexCoord);
     }
     else {
     	gl_FragColor = fColor;
-    } 
+    }*/
+
+    gl_FragColor = fColor + texture2D(texture, fTexCoord); 
     // + gefu liti en svarta kubba!. 
     // * gefur hvítann vegg þegar það eru engir textures en litaða kubba, held að við viljum + ef texturar virka
     // Kubbarnir eru allavega í lagi þegar þeir ery kyrrir þegar við notum +
