--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ Oops ... your browser doesn't support the HTML5 canvas element
 </canvas>
 <p>You have <label id="label">0</label> points</p>
 
-<img id = "wallpaper" src = "wallpaper.png" hidden></img>
+<img id = "wallpaper" src = "stars.png" hidden></img>
    
 <br/>
 
